--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -11,17 +12,104 @@
 	<artifactId>rascal_ecore</artifactId>
 	<groupId>org.rascalmpl</groupId>
 	<version>0.1.0-SNAPSHOT</version>
-	<packaging>eclipse-plugin</packaging>
 
 	<scm>
-		<developerConnection>scm:git:https://github.com/cwi-swat/rascal-ecore.git</developerConnection>			
+		<developerConnection>scm:git:https://github.com/cwi-swat/rascal-ecore.git</developerConnection>
 	</scm>
+	<packaging>jar</packaging>
+
+
+	<repositories>
+		<repository>
+			<id>usethesource</id>
+			<url>http://nexus.usethesource.io/content/repositories/public/</url>
+		</repository>
+	</repositories>
+
+	<build>
+
+		<sourceDirectory>src</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>.</directory>
+				<includes>
+					<include>src/**/*.rsc</include>
+					<include>src/**/*.gz</include>
+					<include>src/**/*.ttl</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>.</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>META-INF/RASCAL.MF</include>
+				</includes>
+			</resource>
+		</resources>
+
+		<plugins>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>${project.basedir}/bin</directory>
+							<includes>
+								<include>**/*.*</include>
+							</includes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
+					</filesets>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>${project.basedir}/bin</directory>
+							<includes>
+								<include>**/*.*</include>
+							</includes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+
 
 	<dependencies>
+		
 		<dependency>
 			<groupId>org.rascalmpl</groupId>
-			<artifactId>rascal_eclipse</artifactId>
-			<version>0.8.4-SNAPSHOT</version>
+			<artifactId>rascal</artifactId>
+			<version>0.13.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>io.usethesource</groupId>
+			<artifactId>vallang</artifactId>
+			<version>0.10.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.emf.ecore</groupId>
+			<artifactId>xmi</artifactId>
+			<version>2.3.0-v200706262000</version>
 		</dependency>
 	</dependencies>
 
